Commits bereinigt